Akeeba Data Compliance 1.1.1
================================================================================
+ Rewritten cookie plugin to work with caching enabled

Akeeba Data Compliance 1.1.0
================================================================================
+ Protection of all component and plugin folders against direct web access
+ Export data: support for Joomla “privacy” group plugins
! Immediate failure accessing the backend of the component [gh-27]
# [HIGH] ATS export, causing fatal error
# [LOW] Cookie compliance fails with a fatal error when the server does not set the HTTP_HOST environment variable
# [LOW] PHP 7.3 warning in the Control Panel page
# [LOW] The cookie consent code was outside the BODY tag

Akeeba Data Compliance 1.0.1
================================================================================
+ Cookie consent plugin
~ Joomla! 3.9 backend Components menu item compatibility

Akeeba Data Compliance 0.1.0
================================================================================
* First release